--- a/HTML_16.html
+++ b/HTML_16.html
@@ -6,7 +6,7 @@
     <title></title>
     <meta name="description" content="The HTML5 sample">
     <meta name="author" content="from internet">
-    <link rel="stylesheet" href="css\s1.css">
+    <link rel="stylesheet" href="css\s5.css">
 </head>
 
 <body>
@@ -56,11 +56,11 @@
             </section>
             <section>
                 <h4>Эпидемиология</h4>
-                Хотя при ультразвуковом обследовании малого таза яичники, выглядящие как поликистозные, обнаруживаются у до 20 % женщин репродуктивного возраста (в том числе и не предъявляющих никаких жалоб), лишь у 5-10 % женщин репродуктивного возраста обнаруживаются клинические признаки, позволяющие ставить диагноз синдрома поликистозных яичников. Синдром поликистозных яичников одинаково распространён в разных этнических группах. Он является наиболее частым гормональным расстройством у женщин детородного возраста и одной из ведущих причин женского бесплодия.</p>
+                <p>Хотя при ультразвуковом обследовании малого таза яичники, выглядящие как поликистозные, обнаруживаются у до 20 % женщин репродуктивного возраста (в том числе и не предъявляющих никаких жалоб), лишь у 5-10 % женщин репродуктивного возраста обнаруживаются клинические признаки, позволяющие ставить диагноз синдрома поликистозных яичников. Синдром поликистозных яичников одинаково распространён в разных этнических группах. Он является наиболее частым гормональным расстройством у женщин детородного возраста и одной из ведущих причин женского бесплодия.</p>
             </section>
             <section>
                 <h4>Лечение</h4>
-            <p>На сегодняшний день препаратами первой линии при лечении поликистоза яичников являются метформин и глитазоны (пиоглитазон, розиглитазон). К ним могут быть присоединены, при необходимости, антиандрогенные препараты (ципротерона ацетат), эстрогены (этинилэстрадиол в виде отдельного препарата или в противозачаточных таблетках), прогестины, малые дозы дексаметазона (0.5-1 мг в вечернее время для подавления секреции надпочечниковых андрогенов).
+                <p>На сегодняшний день препаратами первой линии при лечении поликистоза яичников являются метформин и глитазоны (пиоглитазон, розиглитазон). К ним могут быть присоединены, при необходимости, антиандрогенные препараты (ципротерона ацетат), эстрогены (этинилэстрадиол в виде отдельного препарата или в противозачаточных таблетках), прогестины, малые дозы дексаметазона (0.5-1 мг в вечернее время для подавления секреции надпочечниковых андрогенов).
 
 Необходимы меры по нормализации массы тела: диета, физическая активность.
 
