--- a/HTML_13.html
+++ b/HTML_13.html
@@ -6,7 +6,7 @@
     <title></title>
     <meta name="description" content="The HTML5 sample">
     <meta name="author" content="from internet">
-    <link rel="stylesheet" href="css\s1.css">
+    <link rel="stylesheet" href="css\s2.css">
 </head>
 
 <body>
@@ -52,7 +52,7 @@
 Хроническая боль внизу живота или в пояснице, в тазовой области, вероятно вследствие сдавления органов малого таза увеличенными яичниками или вследствие гиперсекреции простагландинов в яичниках и эндометрии; точная причина хронической боли при поликистозе яичников неизвестна;
 Повышенный уровень ЛГ или повышенное соотношение ЛГ/ФСГ: при измерении на 3-й день менструального цикла соотношение ЛГ/ФСГ оказывается больше 1:1;
 Пониженный уровень глобулина, связывающего половые стероиды;
-Гиперинсулинемия (повышенный уровень инсулина в крови), нарушение толерантности к глюкозе, признаки инсулинорезистентности тканей при тестировании по методу сахарной кривой[7].</p>
+Гиперинсулинемия (повышенный уровень инсулина в крови), нарушение толерантности к глюкозе, признаки инсулинорезистентности тканей при тестировании по методу сахарной кривой[7].
             </section>
             <section>
                 <h4>Эпидемиология</h4>
@@ -60,7 +60,7 @@
             </section>
             <section>
                 <h4>Лечение</h4>
-            <p>На сегодняшний день препаратами первой линии при лечении поликистоза яичников являются метформин и глитазоны (пиоглитазон, розиглитазон). К ним могут быть присоединены, при необходимости, антиандрогенные препараты (ципротерона ацетат), эстрогены (этинилэстрадиол в виде отдельного препарата или в противозачаточных таблетках), прогестины, малые дозы дексаметазона (0.5-1 мг в вечернее время для подавления секреции надпочечниковых андрогенов).
+                На сегодняшний день препаратами первой линии при лечении поликистоза яичников являются метформин и глитазоны (пиоглитазон, розиглитазон). К ним могут быть присоединены, при необходимости, антиандрогенные препараты (ципротерона ацетат), эстрогены (этинилэстрадиол в виде отдельного препарата или в противозачаточных таблетках), прогестины, малые дозы дексаметазона (0.5-1 мг в вечернее время для подавления секреции надпочечниковых андрогенов).
 
 Необходимы меры по нормализации массы тела: диета, физическая активность.
 
@@ -70,7 +70,7 @@
 
 При необходимости индуцировать овуляцию, если она не восстанавливается спонтанно на фоне терапии метформином или глитазонами, женщине могут быть назначены клостилбегит или тамоксифен в середине цикла.
 
-В случае резистентности ко всем применяемым методам лечения показана хирургическая операция (лазерная или диатермокоагуляция яичников либо их декапсуляция, частичная резекция).</p>
+В случае резистентности ко всем применяемым методам лечения показана хирургическая операция (лазерная или диатермокоагуляция яичников либо их декапсуляция, частичная резекция).
             </section>
         
         </article>
